<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.red_six.disasterapp.EnterAddress">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/StandardEdittext"
                    android:id="@+id/enterEditTextName"
                    android:hint="@string/hint_name"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                style="@style/StandardEdittext"
                android:id="@+id/enterEditTextStreetAddress"
                android:hint="@string/hint_address"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                style="@style/StandardEdittext"
                android:id="@+id/enterEditTextCity"
                android:hint="@string/hint_city"/>
            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Spinner
                style="@style/StandardSpinner"
                android:id="@+id/enterSpinnerRegion"
                android:hint="@string/hint_region"
                android:entries="@array/Regions"/>
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="0dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    style="@style/StandardButton"
                    android:text="@string/Cancel"
                    android:id="@+id/enterButtonCancel"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="onCancel" />
                <Button
                    android:text="@string/home"
                    android:onClick="onGoHome"
                    style="@style/StandardButton"/>
                <Button
                    style="@style/StandardButton"
                    android:id="@+id/enterButtonEnter"
                    android:text="@string/Enter"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:onClick="onEnter" />
            </LinearLayout>
        </RelativeLayout>
</RelativeLayout>