<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.red_six.disasterapp.RegisterUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Home">

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/StandardButton"
                android:text="@string/go_to_severity"
                android:onClick="onGoSeverity"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:text="@string/home"
                android:onClick="onGoHome"
                style="@style/StandardButton"/>
            <Button
                style="@style/StandardButton"
                android:text="@string/AddUser"
                android:onClick="onEnterAddress"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
